# FluentCurl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Documentation/: Specification.md
Source/CppProjectTemplate/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.test.cpp
Source/FluentCurl/: CMakeLists.txt  CurlResource.cpp  CurlResource.hpp  Handle.cpp  Handle.hpp  Handle.test.cpp  HandleOptions.hpp  HelloWorld.cpp  HelloWorld.hpp  HelloWorld.test.cpp  Session.cpp  Session.hpp  Session.test.cpp  Test.test.cpp
documentation/: specification.md
source/fluent_curl/: CMakeLists.txt  curl_resource.cpp  curl_resource.hpp  handle.cpp  handle.hpp  handle.test.cpp  handle_options.hpp  session.cpp  session.hpp  session.test.cpp
source/fluent_curl/curl/: curl_multi_socket_handle.cpp  curl_multi_socket_handle.hpp  curl_multi_socket_handle.test.cpp  curl_resource.cpp
source/fluent_curl/curl_resources/: curl_multi_socket_handle.cpp  curl_multi_socket_handle.hpp  curl_multi_socket_handle.test.cpp  curl_resource.cpp
